# libplanes

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  README.md  configure.ac  libplanes.pc.in
apps/: CMakeLists.txt  Makefile.am  dfblayers.c  grab.c  planes.c  render.c
configs/: alpha.config  alpha2.config  background1.xcf  background2.xcf  background3.xcf  background4.xcf  background5.xcf  background6.xcf  clouds.xcf  default.config  grass.xcf  logo.xcf  mars.xcf  mouse.xcf  ninja.xcf  pan.config  paper.config  parallax.config  parallax0.xcf  parallax1.xcf  parallax2.xcf  parallax_2overlays.config  plane1.xcf  plane2.xcf  plane3.xcf  rooster.xcf  rotate.config  satellite.xcf  scale.config  scale_2overlays.config  sprite.config  view2.xcf  window.config  window_2overlays.config
doc/: config.md  logo.xcf  logo_small.xcf
docs/: Doxyfile.in  config.md
include/planes/: draw.h  engine.h  fb.h  kms.h  plane.h
python/: .gitignore  CMakeLists.txt  Makefile.am  __init__.py  example.py  planes.i
python/examples/: example.py  splash.py
scripts/: planes-loop.py  planes-loop.sh  planes.xcf  planes.xml
src/: CMakeLists.txt  Makefile.am  common.c  common.h  draw.c  drm-object.c  drm-object.h  engine.c  fb.c  kms-crtc.c  kms-device.c  kms-framebuffer.c  kms-plane.c  kms-screen.c  p_kms.h  plane.c  script.c  script.h
